--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <img src="assets/vamsi-image.jpg" alt="Purum Vamsi Prasad" class="about-profile-img" loading="lazy">
         <div class="about-facts-card">
           <ul>
-            <li><i class="fa fa-map-marker-alt"></i> India</li>
-            <li><i class="fa fa-graduation-cap"></i> B.Tech, Computer Science (Data Science)</li>
-            <li><i class="fa fa-laptop-code"></i> Web & ML Enthusiast</li>
-            <li><i class="fa fa-heart"></i> Loves: Coding, AI, Design, Music</li>
+            <li><i class="fa fa-graduation-cap"></i> B.Tech, Computer Science and Engineering - Data Science</li>
+            <li><i class="fa fa-map-marker-alt"></i> Madanapalle</li>
+            <li><i class="fa fa-laptop-code"></i> Web & Data Science Enthusiast</li>
+            <li><i class="fa fa-heart"></i> Loves: Cricket,Music</li>
           </ul>
         </div>
         <div class="about-fun-facts">
@@ -131,7 +131,7 @@
       </div>
       <div class="about-text-col" data-aos="fade-left">
         <p class="about-intro">
-          Hi! I'm <strong>Purum Vamsi Prasad</strong>, a passionate Computer Science student specializing in Data Science. I thrive on solving real-world problems with technology and am committed to continuous learning and professional growth.
+          Hi! I'm <strong>Purum Vamsi Prasad</strong>, a passionate  Computer Science and Engineering  student specializing in Data Science. I thrive on solving real-world problems with technology and am committed to continuous learning and professional growth.
         </p>
         <div class="about-highlight-box">
           <p><i class="fa fa-lightbulb"></i> <strong>What drives me?</strong> Innovation, teamwork, and delivering impactful results. My experience spans full-stack development, data analytics, and AI-driven solutions.</p>
