--- a/sections/contact.html
+++ b/sections/contact.html
@@ -29,8 +29,10 @@
         <a href="assets/resume.pdf" class="btn secondary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-download"></i> Download Resume</a>
         <a href="assets/vamsi.vcf" class="btn secondary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-address-card"></i> Download vCard</a>
         <div class="qr-code">
-          <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://linkedin.com/vamsiprasadpuram" alt="LinkedIn QR Code" width="120" height="120" loading="lazy">
-          <div>Scan to connect on LinkedIn</div>
+          <a href="https://www.linkedin.com/in/vamsiprasadpuram" target="_blank" rel="noopener noreferrer" title="Open LinkedIn Profile">
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=160x160&data=https://www.linkedin.com/in/vamsiprasadpuram" alt="LinkedIn QR Code" width="140" height="140" loading="lazy">
+          </a>
+          <div>Scan or click to connect on LinkedIn</div>
         </div>
       </div>
     </div>
