Updated CSS, HTML sections, and added vamsi.vcf file

--- a/sections/about.html
+++ b/sections/about.html
@@ -1,11 +1,11 @@
 <!-- About/Professional Statement Section -->
 <section id="about" class="about-section section" aria-labelledby="about-title">
   <div class="container" data-aos="fade-up">
-    <h2 id="about-title" class="section-title">About Me</h2>
+    <h2 id="about-title" class="section-title" data-aos="fade-down">About Me</h2>
     <div class="about-content about-modern-layout">
       <div class="about-img-col" data-aos="fade-right">
-        <img src="assets/profile.jpg" alt="Purum Vamsi Prasad" class="about-profile-img" loading="lazy">
-        <div class="about-facts-card">
+        <img src="assets/profile.jpg" alt="Purum Vamsi Prasad" class="about-profile-img" loading="lazy" data-aos="zoom-in">
+        <div class="about-facts-card" data-aos="fade-up">
           <ul>
             <li><i class="fa fa-map-marker-alt"></i> India</li>
             <li><i class="fa fa-graduation-cap"></i> B.Tech, Computer Science (Data Science)</li>
@@ -13,7 +13,7 @@
             <li><i class="fa fa-heart"></i> Loves: Coding, AI, Design, Music</li>
           </ul>
         </div>
-        <div class="about-fun-facts">
+        <div class="about-fun-facts" data-aos="fade-up" data-aos-delay="200">
           <div class="fun-fact" title="Coffee Lover"><i class="fa fa-coffee"></i><span>Coffee</span></div>
           <div class="fun-fact" title="Music Fan"><i class="fa fa-music"></i><span>Music</span></div>
           <div class="fun-fact" title="Travel"><i class="fa fa-plane"></i><span>Travel</span></div>
@@ -21,14 +21,14 @@
         </div>
       </div>
       <div class="about-text-col" data-aos="fade-left">
-        <p class="about-intro">
+        <p class="about-intro" data-aos="fade-up">
           Hi! I'm <strong>Purum Vamsi Prasad</strong>, a passionate Computer Science student specializing in Data Science. I thrive on solving real-world problems with technology and am committed to continuous learning and professional growth.
         </p>
-        <div class="about-highlight-box">
+        <div class="about-highlight-box" data-aos="fade-up" data-aos-delay="100">
           <p><i class="fa fa-lightbulb"></i> <strong>What drives me?</strong> Innovation, teamwork, and delivering impactful results. My experience spans full-stack development, data analytics, and AI-driven solutions.</p>
           <p><i class="fa fa-users"></i> <strong>Values:</strong> Collaboration, creativity, and lifelong learning.</p>
         </div>
-        <div class="about-skills-bars">
+        <div class="about-skills-bars" data-aos="fade-up" data-aos-delay="200">
           <div class="skill-bar"><span class="skill-label"><i class="fa fa-brain"></i> Problem Solving</span><div class="bar"><div class="bar-fill" style="width:95%"></div></div></div>
           <div class="skill-bar"><span class="skill-label"><i class="fa fa-users"></i> Teamwork</span><div class="bar"><div class="bar-fill" style="width:90%"></div></div></div>
           <div class="skill-bar"><span class="skill-label"><i class="fa fa-rocket"></i> Creativity</span><div class="bar"><div class="bar-fill" style="width:88%"></div></div></div>
