--- a/sections/projects.html
+++ b/sections/projects.html
@@ -1,13 +1,13 @@
 <!-- Projects Section -->
 <section id="projects" class="projects-section section" aria-labelledby="projects-title">
   <div class="container">
-    <h2 id="projects-title" class="section-title" data-aos="fade-right">Featured Projects</h2>
+    <h2 id="projects-title" class="section-title" data-aos="fade-down">Featured Projects</h2>
     <div class="projects-grid" data-aos="fade-up">
       <!-- Project Cards -->
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="0">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-shield-alt"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-shield-alt"></i></div>
           <div class="project-title-group">
             <h3>SHE Shield</h3>
             <span class="project-tags">IoT, GPS, Embedded, Safety</span>
@@ -19,10 +19,10 @@
           <a href="#" class="btn primary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link-alt"></i> Live Demo</a>
         </div>
       </div>
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="100">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-robot"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-robot"></i></div>
           <div class="project-title-group">
             <h3>AI Chatbot</h3>
             <span class="project-tags">NLP, Python, Chatbot</span>
@@ -34,10 +34,10 @@
           <a href="#" class="btn primary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link-alt"></i> Live Demo</a>
         </div>
       </div>
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="200">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-tasks"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-tasks"></i></div>
           <div class="project-title-group">
             <h3>Task Tracker</h3>
             <span class="project-tags">Full Stack, Productivity, MERN</span>
@@ -49,10 +49,10 @@
           <a href="#" class="btn primary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link-alt"></i> Live Demo</a>
         </div>
       </div>
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="300">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-film"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-film"></i></div>
           <div class="project-title-group">
             <h3>Movie Recommendation System</h3>
             <span class="project-tags">Machine Learning, Recommender</span>
@@ -64,10 +64,10 @@
           <a href="#" class="btn primary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link-alt"></i> Live Demo</a>
         </div>
       </div>
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="400">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-music"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-music"></i></div>
           <div class="project-title-group">
             <h3>Music Recommendation System</h3>
             <span class="project-tags">ML, Audio Analysis, Music</span>
@@ -79,10 +79,10 @@
           <a href="#" class="btn primary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link-alt"></i> Live Demo</a>
         </div>
       </div>
-      <div class="project-card modern-project-card" tabindex="0">
+      <div class="project-card modern-project-card" tabindex="0" data-aos="fade-up" data-aos-delay="500">
         <div class="project-accent"></div>
         <div class="project-header">
-          <div class="project-icon"><i class="fa fa-user-astronaut"></i></div>
+          <div class="project-icon" data-aos="zoom-in"><i class="fa fa-user-astronaut"></i></div>
           <div class="project-title-group">
             <h3>Portfolio Website</h3>
             <span class="project-tags">Web, Portfolio, Responsive</span>
