--- a/sections/skills.html
+++ b/sections/skills.html
@@ -1,10 +1,10 @@
 <!-- Skills Section -->
 <section id="skills" class="skills-section section" aria-labelledby="skills-title">
   <div class="container">
-    <h2 id="skills-title" class="section-title" data-aos="fade-right">Technical Skills</h2>
+    <h2 id="skills-title" class="section-title" data-aos="fade-down">Technical Skills</h2>
     <div class="skills-grid" data-aos="fade-up">
-      <div class="skill-category skill-card">
-        <div class="skill-icon" style="color:#fbbf24"><i class="fa fa-code"></i></div>
+      <div class="skill-category skill-card" data-aos="fade-up" data-aos-delay="0">
+        <div class="skill-icon" style="color:#fbbf24" data-aos="zoom-in"><i class="fa fa-code"></i></div>
         <h3>Languages</h3>
         <ul class="skill-tags">
           <li><i class="fab fa-python"></i> Python</li>
@@ -15,16 +15,16 @@
           <li><i class="fab fa-js"></i> JavaScript</li>
         </ul>
       </div>
-      <div class="skill-category skill-card">
-        <div class="skill-icon" style="color:#38bdf8"><i class="fa fa-layer-group"></i></div>
+      <div class="skill-category skill-card" data-aos="fade-up" data-aos-delay="100">
+        <div class="skill-icon" style="color:#38bdf8" data-aos="zoom-in"><i class="fa fa-layer-group"></i></div>
         <h3>Frameworks</h3>
         <ul class="skill-tags">
           <li><i class="fab fa-react"></i> React.js</li>
           <li><i class="fab fa-node-js"></i> Node.js</li>
         </ul>
       </div>
-      <div class="skill-category skill-card">
-        <div class="skill-icon" style="color:#6366f1"><i class="fa fa-cubes"></i></div>
+      <div class="skill-category skill-card" data-aos="fade-up" data-aos-delay="200">
+        <div class="skill-icon" style="color:#6366f1" data-aos="zoom-in"><i class="fa fa-cubes"></i></div>
         <h3>Libraries</h3>
         <ul class="skill-tags">
           <li>Pandas</li>
@@ -34,8 +34,8 @@
           <li>Seaborn</li>
         </ul>
       </div>
-      <div class="skill-category skill-card">
-        <div class="skill-icon" style="color:#0ea5e9"><i class="fa fa-tools"></i></div>
+      <div class="skill-category skill-card" data-aos="fade-up" data-aos-delay="300">
+        <div class="skill-icon" style="color:#0ea5e9" data-aos="zoom-in"><i class="fa fa-tools"></i></div>
         <h3>Tools</h3>
         <ul class="skill-tags">
           <li><i class="fab fa-microsoft"></i> Power BI</li>
@@ -44,8 +44,8 @@
           <li><i class="fab fa-canadian-maple-leaf"></i> Canva</li>
         </ul>
       </div>
-      <div class="skill-category skill-card">
-        <div class="skill-icon" style="color:#f59e42"><i class="fa fa-desktop"></i></div>
+      <div class="skill-category skill-card" data-aos="fade-up" data-aos-delay="400">
+        <div class="skill-icon" style="color:#f59e42" data-aos="zoom-in"><i class="fa fa-desktop"></i></div>
         <h3>Platforms</h3>
         <ul class="skill-tags">
           <li><i class="fab fa-vuejs"></i> VS Code</li>
