--- a/index.html
+++ b/index.html
@@ -70,37 +70,37 @@
     </button>
   </div>
 </nav>
-  <!-- Hero Section -->
-  <header id="hero" class="premium-hero" tabindex="-1">
-  <div class="premium-hero-bg"></div>
-  <div class="premium-hero-content">
-    <div class="premium-hero-card glass-card" data-aos="fade-up">
-      <div class="premium-hero-profile">
-        <img src="assets/vamsi-image.jpg" alt="Purum Vamsi Prasad" class="premium-profile-img" loading="lazy">
+  <!-- Hero Section with Glass Effect -->
+  <header id="hero" class="glass-hero-section" tabindex="-1">
+  <div class="glass-hero-bg"></div>
+  <div class="glass-hero-content">
+    <div class="glass-hero-card" data-aos="fade-up">
+      <div class="glass-hero-profile">
+        <img src="assets/vamsi-image.jpg" alt="Purum Vamsi Prasad" class="glass-profile-img" loading="lazy">
       </div>
-      <div class="premium-hero-text">
-        <div class="premium-hero-status"><i class="fa fa-circle"></i> Open to Opportunities</div>
-        <div class="premium-hero-name">Vamsi Prasad Purum </div>
-        <div class="premium-hero-role">Web Developer <span class="divider-dot">•</span> Data Science Enthusiast</div>
-        <div class="premium-hero-typing">
+      <div class="glass-hero-text">
+        <div class="glass-hero-status"><i class="fa fa-circle"></i> Open to Opportunities</div>
+        <div class="glass-hero-name">Purum Vamsi Prasad</div>
+        <div class="glass-hero-role">Web Developer <span class="divider-dot">•</span> Data Science Enthusiast</div>
+        <div class="glass-hero-typing">
           <span class="typed-text"></span><span class="cursor">|</span>
         </div>
-        <div class="premium-hero-desc">B.Tech in Computer Science and Engineering - Data Science. Passionate about building impactful digital experiences and AI-driven solutions.</div>
-        <div class="premium-hero-buttons">
+        <div class="glass-hero-desc">B.Tech in Computer Science (Data Science). Passionate about building impactful digital experiences and AI-driven solutions.</div>
+        <div class="glass-hero-buttons">
           <a href="#projects" class="btn premium-btn-glass">View Projects</a>
           <a href="#contact" class="btn premium-btn-glass">Contact Me</a>
           <a href="assets/resume.pdf" class="btn premium-btn-glass" target="_blank" rel="noopener noreferrer"><i class="fa fa-download"></i> Resume</a>
         </div>
-        <div class="premium-social-bar">
-          <a href="https://github.com/vamsiprasad-ctrl/" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/vamsiprasadpurum" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <div class="glass-social-bar">
+          <a href="https://github.com/vamsiprasad-ctrl" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a>
+          <a href="https://linkedin.com/vamsiprasadpuram" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
-    <div class="premium-hero-floaters">
-      <div class="floater floater1"></div>
-      <div class="floater floater2"></div>
-      <div class="floater floater3"></div>
+    <div class="glass-floaters">
+      <div class="glass-floater glass-floater1"></div>
+      <div class="glass-floater glass-floater2"></div>
+      <div class="glass-floater glass-floater3"></div>
     </div>
   </div>
 </header>
@@ -537,7 +537,7 @@
   </div>
     <h2 id="contact-title" class="section-title" data-aos="fade-right">Contact Me</h2>
     <div class="contact-grid" data-aos="fade-up">
-      <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST" autocomplete="on" novalidate>
+      <form id="contact-form" action="https://formspree.io/f/mnnvrjgg" method="POST" autocomplete="on" novalidate>
         <!-- TODO: Replace 'your-form-id' with your actual Formspree form ID -->
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required aria-required="true" autocomplete="name" aria-describedby="name-error">
