--- a/sections/about.html
+++ b/sections/about.html
@@ -28,10 +28,10 @@
           <p><i class="fa fa-lightbulb"></i> <strong>What drives me?</strong> Innovation, teamwork, and delivering impactful results. My experience spans full-stack development, data analytics, and AI-driven solutions.</p>
           <p><i class="fa fa-users"></i> <strong>Values:</strong> Collaboration, creativity, and lifelong learning.</p>
         </div>
-        <div class="about-skills-bars" data-aos="fade-up" data-aos-delay="200">
-          <div class="skill-bar"><span class="skill-label"><i class="fa fa-brain"></i> Problem Solving</span><div class="bar"><div class="bar-fill" style="width:95%"></div></div></div>
-          <div class="skill-bar"><span class="skill-label"><i class="fa fa-users"></i> Teamwork</span><div class="bar"><div class="bar-fill" style="width:90%"></div></div></div>
-          <div class="skill-bar"><span class="skill-label"><i class="fa fa-rocket"></i> Creativity</span><div class="bar"><div class="bar-fill" style="width:88%"></div></div></div>
+        <div class="about-skills-inline" data-aos="fade-up" data-aos-delay="200">
+          <span class="skill-badge"><i class="fa fa-brain"></i> Problem Solving</span>
+          <span class="skill-badge"><i class="fa fa-users"></i> Teamwork</span>
+          <span class="skill-badge"><i class="fa fa-rocket"></i> Creativity</span>
         </div>
         <blockquote class="about-quote" data-aos="zoom-in"><i class="fa fa-quote-left"></i> "Strive not to be a success, but rather to be of value." <span>- Albert Einstein</span></blockquote>
       </div>
