--- a/sections/contact.html
+++ b/sections/contact.html
@@ -26,7 +26,7 @@
           <li><i class="fab fa-github"></i> <a href="https://github.com/vamsiprasad-ctrl" target="_blank" rel="noopener noreferrer">github.com/vamsiprasad-ctrl</a></li>
           <li><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/vamsiprasadpuram" target="_blank" rel="noopener noreferrer">linkedin.com/vamsiprasadpuram</a></li>
         </ul>
-        <a href="assets/resume.pdf" class="btn secondary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-download"></i> Download Resume</a>
+        <a href="assets/Purum Vamsi Prasad Resume.docx" class="btn secondary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-download"></i> Download Resume</a>
         <a href="assets/vamsi.vcf" class="btn secondary-btn" target="_blank" rel="noopener noreferrer"><i class="fa fa-address-card"></i> Download vCard</a>
         <div class="qr-code">
           <a href="https://www.linkedin.com/in/vamsiprasadpuram" target="_blank" rel="noopener noreferrer" title="Open LinkedIn Profile">
